--- a/webserver/public/app/atracciones/views/add.html
+++ b/webserver/public/app/atracciones/views/add.html
@@ -27,7 +27,7 @@
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Ciudad de la atracción</label>
                     <div class="col-sm-10">
-                        <select required ng-model="atraccion.ciudadSelected" ng-options="ciudad.nombre for ciudad in ciudades">
+                        <select class="form-control" required ng-model="atraccion.ciudadSelected" ng-options="ciudad.nombre for ciudad in ciudades">
                         </select>
                     </div>
                 </div>
@@ -42,8 +42,24 @@
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Ubicación</label>
                     <div class="col-sm-10">
-                        {{atraccion.lat}}, {{atraccion.lng}}
                         <div id="map" style="width: 100%; height: 500px; position: relative; overflow: hidden;">Error al cargar el mapa</div>
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Imágenes</label>
+                    <div class="col-sm-10">
+                        <label class="btn btn-primary">
+                            <input type="file" custom-on-change="uploadImageClick" style="display:none;" multiple="multiple">
+                            Subir imagen
+                        </label>
+
+                        <div class="previewDeImagenes">
+                            <div class="imagenPreview" ng-repeat="(id,atraccionImagen) in atraccion.imagenes">
+                                <img ng-src="{{atraccionImagen.imgSrc}}" class="img-responsive"/>
+                                <button class="btn btn-default btn-block">Borrar imagen</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -51,12 +67,20 @@
                     <label class="col-sm-2 col-form-label">Costo</label>
                     <div class="col-sm-10">
                         <div class="input-group">
+                            <span class="input-group-addon">
+                                <input ng-model="atraccion.monedaCosto" list="monedas">
+                                    <datalist id="monedas">
+                                        <option value="{{moneda}}" ng-repeat="moneda in atraccion.monedas">
+                                    </datalist>
+                            </span>
+                            <!--
                             <span class="input-group-addon" id="basic-addon1">
                                 <input ng-model="atraccion.monedaCosto" list="monedas">
                                     <datalist id="monedas">
                                         <option value="{{moneda}}" ng-repeat="moneda in atraccion.monedas">
                                     </datalist>
                             </span>
+                            -->
                             <input required step="any" min="0" type="number" ng-model="atraccion.montoCosto" class="form-control" placeholder="Costo de la atracción">
                         </div>
                     </div>
@@ -89,7 +113,7 @@
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Clasificación</label>
                     <div class="col-sm-10">
-                        <select ng-model="atraccion.clasificacionSelected" ng-options="clasificacion for clasificacion in atraccion.clasificaciones">
+                        <select class="form-control" ng-model="atraccion.clasificacionSelected" ng-options="clasificacion for clasificacion in atraccion.clasificaciones">
                         </select>
                     </div>
                 </div>
