--- a/webserver/public/stylesheets/style-menu.css
+++ b/webserver/public/stylesheets/style-menu.css
@@ -47,14 +47,19 @@ code {
 
 .previewDeImagenes .imagenPreview {
     display: inline-block;
-    *display: inline;/*For IE7*/
-    *zoom:1;/*For IE7*/
-    width:300px;
-    height:260px;
-    position:relative;
-    vertical-align:top;
+    width:350px;
+    height:250px;
     margin-right:10px;
-    white-space:normal;
+}
+
+.previewDeImagenes .imagenPreview img {
+    width:100%;
+    height:85%;
+}
+
+.previewDeImagenes .imagenPreview button {
+    width:100%;
+    height:15%;
 }
 
 
