--- a/webserver/public/app/atracciones/views/add.html
+++ b/webserver/public/app/atracciones/views/add.html
@@ -63,6 +63,27 @@
                     </div>
                 </div>
 
+                <!-- Videos -->
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Videos</label>
+                    <div class="col-sm-10">
+                        <label class="btn btn-primary">
+                            <input type="file" custom-on-change="uploadVideoClick" style="display:none;" multiple="multiple">
+                            Subir video
+                        </label>
+
+                        <div class="previewDeVideos">
+                            <div class="videoPreview" ng-repeat="(id,atraccionVideo) in atraccion.videos">
+                                <video controls>
+                                    <source ng-src="{{atraccionVideo.vidSrc}}" type="video/mp4">
+                                    Your browser does not support the video tag.
+                                </video>
+                                <button disabled type='button' class="btn btn-default btn-block" ng-click="deleteVideo(id,atraccionVideo)">Borrar video</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Costo</label>
                     <div class="col-sm-10">
