--- a/webserver/public/stylesheets/style-menu.css
+++ b/webserver/public/stylesheets/style-menu.css
@@ -63,6 +63,7 @@ code {
 }
 
 
+/* -- */
 .previewDeVideos {
     margin-top:10px;
     overflow-x:auto;
@@ -71,20 +72,21 @@ code {
 
 .previewDeVideos .videoPreview {
     display: inline-block;
-    *display: inline;/*For IE7*/
-    *zoom:1;/*For IE7*/
-    width:320px;
-    height:300px;
-    position:relative;
-    vertical-align:top;
+    width:350px;
+    height:250px;
     margin-right:10px;
-    white-space:normal;
 }
 
 .previewDeVideos .videoPreview video {
-    width:320px;
-    height:260px;
+    width:100%;
+    height:80%;
 }
+
+.previewDeVideos .videoPreview button {
+    width:100%;
+    height:15%;
+}
+
 
 .previewDeAudios {
     position:relative;
