--- a/webserver/public/app/atracciones/views/add.html
+++ b/webserver/public/app/atracciones/views/add.html
@@ -84,6 +84,28 @@
                     </div>
                 </div>
 
+                <!-- Audios -->
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Audios</label>
+                    <div class="col-sm-10">
+                        <label class="btn btn-primary" >
+                            <input type="file" custom-on-change="uploadAudioClick" style="display:none;" multiple="multiple">
+                            Subir audio
+                        </label>
+
+                        <div class="previewDeAudios">
+                            <div class="audioPreview" ng-repeat="(id,atraccionAudio) in atraccion.audios">
+                                <audio class="media-middle" controls>
+                                    <source ng-src="{{atraccionAudio.audSrc}}">
+                                    Your browser does not support the audio element.
+                                </audio>
+                                <button type='button' class="btn btn-default" ng-click="deleteAudio(id,atraccionAudio)">Borrar audio</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Costo</label>
                     <div class="col-sm-10">
