--- a/client/MyApplication/app/src/main/res/layout/activity_atraccion.xml
+++ b/client/MyApplication/app/src/main/res/layout/activity_atraccion.xml
@@ -4,8 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:id="@+id/masterAtraccion"
     android:weightSum="1"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:animateLayoutChanges="true">
 
     <include
         android:id="@+id/include3"
@@ -220,17 +222,25 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
+                android:id="@+id/relativeVideo"
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="5dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:layout_marginStart="5dp">
+                android:layout_marginStart="5dp"
+                android:background="@color/black">
+
+                <VideoView
+                    android:id="@+id/miniVideoView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true"/>
 
                 <ImageView
                     android:id="@+id/videoIMG"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/black"
                     android:scaleType="centerCrop" />
 
                 <ImageView
@@ -240,7 +250,7 @@
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
-                    android:scaleType="fitXY"
+                    android:scaleType="centerCrop"
                     android:src="@drawable/play_btn" />
 
             </RelativeLayout>
