--- a/webserver/public/app/push/views/form.html
+++ b/webserver/public/app/push/views/form.html
@@ -54,6 +54,17 @@
             </div>
 
             <div class="form-group row">
+                <label class="col-sm-2 col-form-label">Ciudad asociada</label>
+                <div class="col-sm-10">
+                    <select class="form-control">
+                        <option>Bariloche</option>
+                        <option>CABA</option>
+                        <option>Portugues</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="form-group row">
                 <label class="col-sm-2 col-form-label">Fecha de publicación</label>
                 <div class="col-sm-10">
                     <input type="datetime-local">
