--- a/webserver/public/app/recorridos/views/form.html
+++ b/webserver/public/app/recorridos/views/form.html
@@ -65,12 +65,29 @@
                         </span>
                     </div>
 
+                    <ul class="list-group" style="margin-top:1%">
+                        <li class="list-group-item clearfix" ng-repeat="(id,atraccion) in recorrido.listadoAtracciones">
+                            {{atraccion.nombre}}
+                            <span class="pull-right">
+                                <span class="btn btn-xs btn-default" ng-click="listadoMoveUp(id,remove)">
+                                    <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
+                                </span>
+                                <span class="btn btn-xs btn-default" ng-click="listadoMoveDown(id,remove)">
+                                    <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>
+                                </span>
+                                <span class="btn btn-xs btn-default" ng-click="listadoRemove(id,atraccion)">
+                                    <span class="glyphicon glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                </span>
+                            </span>
+                        </li>
+                    </ul>
+
 
                 </div>
             </div>
 
             <div class="form-group row">
-                <button type="submit" class="btn btn-primary center-block">Agregar push</button>
+                <button type="submit" class="btn btn-primary center-block">{{submit}}</button>
             </div>
         </form>
     </div>
