--- a/webserver/public/app/recorridos/views/form.html
+++ b/webserver/public/app/recorridos/views/form.html
@@ -86,6 +86,10 @@
                 </div>
             </div>
 
+            <!-- Error header -->
+            <div id="error-en-formulario">
+            </div>
+
             <div class="form-group row">
                 <button type="submit" class="btn btn-primary center-block">{{submit}}</button>
             </div>
