--- a/webserver/public/app/recorridos/views/listado.html
+++ b/webserver/public/app/recorridos/views/listado.html
@@ -48,6 +48,12 @@
                             {{getListadoDeAtracciones(recorrido)}}
                         </div>
                     </div>
+                    <div class="row">
+                        <label class="col-sm-2 col-form-label">Idiomas</label>
+                        <div class="col-sm-10">
+                            <span class="label label-info" style="margin-right:3px;" ng-repeat="idioma in recorrido.idiomasCargados">{{idioma.nombre}}</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
