--- a/client/MyApplication/app/src/main/res/layout/recorrido_tab.xml
+++ b/client/MyApplication/app/src/main/res/layout/recorrido_tab.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/nombreAtr"
+        android:id="@+id/nombreRec"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
@@ -19,6 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:background="@drawable/faafassd"
+        android:id="@+id/imgRec"
         android:scaleType="centerCrop"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="5dp"
@@ -60,12 +61,14 @@
         android:layout_marginRight="5dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="8dp"
+        android:id="@+id/comenzar"
         android:text="Comenzar recorrido"/>
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:id="@+id/recList"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="5dp"
         android:layout_marginLeft="5dp"
